add GetWalletUsageHist in wallet proto
