# m2m/api/device.pb.go
@@ -28,21 +28,21 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 type DeviceMode int32
 
 const (
-	DeviceMode_inactive              DeviceMode = 0
-	DeviceMode_free_gateways_limited DeviceMode = 1
-	DeviceMode_whole_network         DeviceMode = 3
+	DeviceMode_dv_inactive              DeviceMode = 0
+	DeviceMode_dv_free_gateways_limited DeviceMode = 1
+	DeviceMode_dv_whole_network         DeviceMode = 3
 )
 
 var DeviceMode_name = map[int32]string{
-	0: "inactive",
-	1: "free_gateways_limited",
-	3: "whole_network",
+	0: "dv_inactive",
+	1: "dv_free_gateways_limited",
+	3: "dv_whole_network",
 }
 
 var DeviceMode_value = map[string]int32{
-	"inactive":              0,
-	"free_gateways_limited": 1,
-	"whole_network":         3,
+	"dv_inactive":              0,
+	"dv_free_gateways_limited": 1,
+	"dv_whole_network":         3,
 }
 
 func (x DeviceMode) String() string {
@@ -439,7 +439,6 @@ func (m *SetDeviceModeRequest) GetDevMode() string {
 
 type SetDeviceModeResponse struct {
 	Status               bool             `protobuf:"varint,1,opt,name=status,proto3" json:"status,omitempty"`
-	DevMode              DeviceMode       `protobuf:"varint,2,opt,name=dev_mode,json=devMode,proto3,enum=api.DeviceMode" json:"dev_mode,omitempty"`
 	UserProfile          *ProfileResponse `protobuf:"bytes,3,opt,name=user_profile,json=userProfile,proto3" json:"user_profile,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}         `json:"-"`
 	XXX_unrecognized     []byte           `json:"-"`
@@ -478,13 +477,6 @@ func (m *SetDeviceModeResponse) GetStatus() bool {
 	return false
 }
 
-func (m *SetDeviceModeResponse) GetDevMode() DeviceMode {
-	if m != nil {
-		return m.DevMode
-	}
-	return DeviceMode_inactive
-}
-
 func (m *SetDeviceModeResponse) GetUserProfile() *ProfileResponse {
 	if m != nil {
 		return m.UserProfile
@@ -508,43 +500,42 @@ func init() {
 func init() { proto.RegisterFile("device.proto", fileDescriptor_870276a56ac00da5) }
 
 var fileDescriptor_870276a56ac00da5 = []byte{
-	// 564 bytes of a gzipped FileDescriptorProto
+	// 554 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
-	0x10, 0xc5, 0x31, 0x0d, 0xe9, 0x24, 0x29, 0x61, 0x95, 0xb4, 0x89, 0x69, 0x85, 0xf1, 0x29, 0x8a,
-	0x44, 0x22, 0xa5, 0x07, 0x24, 0xce, 0x95, 0xda, 0x4a, 0x20, 0x21, 0x57, 0x9c, 0x2d, 0xd3, 0x9d,
-	0xb8, 0xab, 0xa4, 0x5e, 0xd7, 0xbb, 0x71, 0xd4, 0x2b, 0x12, 0x12, 0x77, 0xf8, 0x24, 0xfe, 0x80,
-	0x5f, 0xe0, 0x43, 0x90, 0xd7, 0xeb, 0x60, 0x3b, 0xa1, 0x42, 0xb9, 0xf4, 0x14, 0x67, 0xf6, 0xcd,
-	0x7b, 0x6f, 0x66, 0x67, 0x16, 0x5a, 0x14, 0x13, 0x76, 0x8d, 0xe3, 0x28, 0xe6, 0x92, 0x13, 0xd3,
-	0x8f, 0x98, 0x75, 0x1c, 0x70, 0x1e, 0x2c, 0x70, 0xe2, 0x47, 0x6c, 0xe2, 0x87, 0x21, 0x97, 0xbe,
-	0x64, 0x3c, 0x14, 0x19, 0xc4, 0x6a, 0x47, 0x31, 0x9f, 0xb1, 0x85, 0xce, 0x70, 0xde, 0x40, 0xf7,
-	0x1c, 0xe5, 0x99, 0x22, 0x79, 0xcf, 0x84, 0x74, 0xf1, 0x6e, 0x89, 0x42, 0x92, 0x1e, 0xd4, 0x79,
-	0x1c, 0x78, 0x8c, 0xf6, 0x0d, 0xdb, 0x18, 0x9a, 0xee, 0x1e, 0x8f, 0x83, 0x4b, 0xea, 0x7c, 0x35,
-	0xa0, 0x57, 0xc1, 0x8b, 0x88, 0x87, 0x02, 0xc9, 0x29, 0x34, 0x29, 0x26, 0x9e, 0x66, 0xef, 0x1b,
-	0xb6, 0x39, 0x6c, 0x4e, 0xc9, 0xd8, 0x8f, 0xd8, 0x38, 0x43, 0x7f, 0xcc, 0x4e, 0x5c, 0xa0, 0x98,
-	0xe8, 0x6f, 0xf2, 0x16, 0x5a, 0x4b, 0x81, 0xf1, 0x3a, 0xab, 0x66, 0x1b, 0xc3, 0xe6, 0xb4, 0xab,
-	0xb2, 0x72, 0xbc, 0x16, 0x70, 0x9b, 0x29, 0x52, 0x07, 0x9d, 0x73, 0x38, 0x5a, 0xdb, 0x58, 0x03,
-	0x1f, 0x72, 0x9e, 0x86, 0x53, 0x7f, 0x8c, 0x2a, 0x11, 0xd3, 0xdd, 0xa3, 0x98, 0x5c, 0x52, 0xe7,
-	0x13, 0xb4, 0x4b, 0x2c, 0xe4, 0x00, 0x6a, 0xeb, 0xd4, 0x1a, 0xa3, 0xc4, 0x86, 0xd6, 0x6c, 0xee,
-	0x65, 0x5d, 0xf6, 0x16, 0xbe, 0xce, 0x86, 0xd9, 0x5c, 0xf7, 0xc0, 0x27, 0x04, 0x9e, 0xde, 0x72,
-	0x8a, 0x7d, 0xd3, 0x36, 0x86, 0xfb, 0xae, 0xfa, 0x76, 0xbe, 0x19, 0xd0, 0xdf, 0x34, 0xf8, 0xe8,
-	0xad, 0xba, 0x60, 0x42, 0xf2, 0xf8, 0x7e, 0xb7, 0x56, 0xc9, 0x42, 0x49, 0x6b, 0x22, 0x5d, 0xd2,
-	0xab, 0xac, 0xa4, 0x9b, 0x2c, 0xac, 0xe8, 0xf6, 0x95, 0x7d, 0x0d, 0xdc, 0xdd, 0xbe, 0x07, 0xdd,
-	0xab, 0x5c, 0xf5, 0x03, 0xa7, 0xbb, 0x5d, 0x33, 0x19, 0x40, 0x23, 0x0d, 0x17, 0xee, 0xe9, 0x19,
-	0xc5, 0x24, 0xe5, 0x73, 0x7e, 0x18, 0xd0, 0xab, 0x28, 0xe8, 0xa2, 0x0e, 0xa1, 0x2e, 0xa4, 0x2f,
-	0x97, 0x42, 0x49, 0x34, 0x5c, 0xfd, 0x8f, 0x8c, 0x0a, 0x64, 0xa9, 0xca, 0xc1, 0xf4, 0x79, 0xe1,
-	0xf2, 0x14, 0x45, 0xce, 0xbe, 0x51, 0xb7, 0xf9, 0x9f, 0x75, 0x8f, 0x2e, 0x00, 0xfe, 0xf2, 0x91,
-	0x16, 0x34, 0x58, 0xe8, 0x5f, 0x4b, 0x96, 0x60, 0xe7, 0x09, 0x19, 0x40, 0x6f, 0x16, 0x23, 0x7a,
-	0x81, 0x2f, 0x71, 0xe5, 0xdf, 0x0b, 0x6f, 0xc1, 0x6e, 0x99, 0x44, 0xda, 0x31, 0xc8, 0x0b, 0x68,
-	0xaf, 0x6e, 0xf8, 0x02, 0xbd, 0x10, 0xe5, 0x8a, 0xc7, 0xf3, 0x8e, 0x39, 0xfd, 0x69, 0xe6, 0x33,
-	0x7e, 0x85, 0x71, 0xfa, 0x43, 0x10, 0xda, 0xa5, 0x25, 0x26, 0x03, 0xe5, 0x67, 0xdb, 0x43, 0x60,
-	0x59, 0xdb, 0x8e, 0x32, 0xc3, 0xce, 0xc9, 0x97, 0x5f, 0xbf, 0xbf, 0xd7, 0x8e, 0x48, 0x4f, 0xbd,
-	0x35, 0xd9, 0x8e, 0x4c, 0x02, 0x94, 0x67, 0x89, 0x62, 0xbd, 0x83, 0x4e, 0x75, 0x07, 0xc8, 0x71,
-	0x99, 0xae, 0xbc, 0xbb, 0xd6, 0xc9, 0x3f, 0x4e, 0xb5, 0x9e, 0xad, 0xf4, 0x2c, 0xd2, 0xdf, 0xd0,
-	0xcb, 0xe9, 0xc3, 0x82, 0x64, 0x3e, 0x7a, 0x15, 0xc9, 0xf2, 0x0e, 0x54, 0x25, 0x2b, 0x83, 0xfd,
-	0x40, 0x89, 0x29, 0x92, 0x30, 0x68, 0x97, 0x66, 0x47, 0x77, 0x72, 0xdb, 0xc4, 0xea, 0x4e, 0x6e,
-	0x1d, 0x35, 0xe7, 0xb5, 0x92, 0x79, 0xe9, 0x1c, 0x16, 0x65, 0x84, 0x82, 0xa6, 0xb8, 0x77, 0xc6,
-	0xe8, 0x73, 0x5d, 0x3d, 0xd8, 0xa7, 0x7f, 0x02, 0x00, 0x00, 0xff, 0xff, 0x5a, 0xc2, 0x00, 0xa5,
-	0xf2, 0x05, 0x00, 0x00,
+	0x10, 0xc5, 0x31, 0x2d, 0xed, 0xa4, 0x81, 0x68, 0x95, 0xb4, 0xae, 0x69, 0x85, 0xf1, 0x29, 0xaa,
+	0x44, 0x22, 0xa5, 0x07, 0x24, 0xce, 0x95, 0x4a, 0x25, 0x90, 0xc0, 0x15, 0xe7, 0xd5, 0xd2, 0x9d,
+	0x38, 0xab, 0xa4, 0x5e, 0xd7, 0xbb, 0x71, 0xd4, 0x2b, 0x12, 0x12, 0x77, 0x7e, 0x89, 0x3f, 0xe0,
+	0x17, 0xf8, 0x10, 0xe4, 0xf5, 0x26, 0xc4, 0x4e, 0xa8, 0x50, 0x2e, 0x9c, 0xe2, 0xcc, 0xbe, 0x79,
+	0xef, 0xcd, 0xf8, 0xad, 0xe1, 0x80, 0x63, 0x2e, 0x6e, 0xb0, 0x9f, 0x66, 0x52, 0x4b, 0xe2, 0xb2,
+	0x54, 0xf8, 0x27, 0xb1, 0x94, 0xf1, 0x14, 0x07, 0x2c, 0x15, 0x03, 0x96, 0x24, 0x52, 0x33, 0x2d,
+	0x64, 0xa2, 0x4a, 0x88, 0xdf, 0x4a, 0x33, 0x39, 0x12, 0x53, 0xdb, 0x11, 0xbe, 0x82, 0xce, 0x25,
+	0xea, 0x0b, 0x43, 0xf2, 0x4e, 0x28, 0x1d, 0xe1, 0xdd, 0x0c, 0x95, 0x26, 0x5d, 0xd8, 0x95, 0x59,
+	0x4c, 0x05, 0xf7, 0x9c, 0xc0, 0xe9, 0xb9, 0xd1, 0x8e, 0xcc, 0xe2, 0x2b, 0x1e, 0x7e, 0x75, 0xa0,
+	0x5b, 0xc3, 0xab, 0x54, 0x26, 0x0a, 0xc9, 0x39, 0x34, 0x39, 0xe6, 0xd4, 0xb2, 0x7b, 0x4e, 0xe0,
+	0xf6, 0x9a, 0x43, 0xd2, 0x67, 0xa9, 0xe8, 0x97, 0xe8, 0x0f, 0xe5, 0x49, 0x04, 0x1c, 0x73, 0xfb,
+	0x4c, 0x5e, 0xc3, 0xc1, 0x4c, 0x61, 0xb6, 0xec, 0x6a, 0x04, 0x4e, 0xaf, 0x39, 0xec, 0x98, 0xae,
+	0x05, 0xde, 0x0a, 0x44, 0xcd, 0x02, 0x69, 0x8b, 0xe1, 0x25, 0x1c, 0x2d, 0x6d, 0x2c, 0x81, 0x0f,
+	0x39, 0x2f, 0xca, 0x85, 0x3f, 0xc1, 0x8d, 0x88, 0x1b, 0xed, 0x70, 0xcc, 0xaf, 0x78, 0xf8, 0x09,
+	0x5a, 0x15, 0x16, 0xf2, 0x14, 0x1a, 0xcb, 0xd6, 0x86, 0xe0, 0x24, 0x80, 0x83, 0xd1, 0x84, 0x96,
+	0x5b, 0xa6, 0x53, 0x66, 0xbb, 0x61, 0x34, 0xb1, 0x3b, 0x60, 0x84, 0xc0, 0xe3, 0x5b, 0xc9, 0xd1,
+	0x73, 0x03, 0xa7, 0xb7, 0x1f, 0x99, 0xe7, 0xf0, 0x9b, 0x03, 0xde, 0xba, 0xc1, 0xff, 0xbe, 0xaa,
+	0xb7, 0x42, 0x69, 0x99, 0xdd, 0x6f, 0xb7, 0x2a, 0xbd, 0x32, 0xd2, 0x92, 0xc8, 0x8e, 0xf4, 0xa2,
+	0x1c, 0x69, 0x5c, 0x96, 0x0d, 0xdd, 0xbe, 0xb1, 0x6f, 0x81, 0xdb, 0xdb, 0xa7, 0xd0, 0xb9, 0x5e,
+	0xa8, 0xbe, 0x97, 0x7c, 0xbb, 0xd7, 0x4c, 0x8e, 0x61, 0xaf, 0x28, 0xaf, 0xbc, 0xa7, 0x27, 0x1c,
+	0xf3, 0x82, 0x2f, 0x1c, 0x43, 0xb7, 0x26, 0x60, 0x67, 0x3a, 0x84, 0x5d, 0xa5, 0x99, 0x9e, 0x29,
+	0xa3, 0xb0, 0x17, 0xd9, 0x7f, 0x6b, 0xa3, 0xb8, 0xff, 0x38, 0xca, 0xd9, 0x47, 0x80, 0x3f, 0x32,
+	0xe4, 0x19, 0x34, 0x79, 0x4e, 0x45, 0xc2, 0x6e, 0xb4, 0xc8, 0xb1, 0xfd, 0x88, 0x9c, 0x80, 0xc7,
+	0x73, 0x3a, 0xca, 0x10, 0x69, 0xcc, 0x34, 0xce, 0xd9, 0xbd, 0xa2, 0x53, 0x71, 0x2b, 0x34, 0xf2,
+	0xb6, 0x43, 0x3a, 0xd0, 0xe6, 0x39, 0x9d, 0x8f, 0xe5, 0x14, 0x69, 0x82, 0x7a, 0x2e, 0xb3, 0x49,
+	0xdb, 0x1d, 0xfe, 0x70, 0x17, 0xf9, 0xbd, 0xc6, 0xac, 0xf8, 0x21, 0x08, 0xad, 0xca, 0x05, 0x25,
+	0xc7, 0xc6, 0xd8, 0xa6, 0x4b, 0xee, 0xfb, 0x9b, 0x8e, 0x4a, 0xe7, 0xe1, 0xe9, 0x97, 0x9f, 0xbf,
+	0xbe, 0x37, 0x8e, 0x48, 0xd7, 0x7c, 0x47, 0xca, 0xfc, 0x0f, 0x62, 0xd4, 0x17, 0xb9, 0x61, 0xbd,
+	0x83, 0x76, 0x3d, 0xdf, 0xe4, 0xa4, 0x4a, 0x57, 0xbd, 0x97, 0xfe, 0xe9, 0x5f, 0x4e, 0xad, 0x5e,
+	0x60, 0xf4, 0x7c, 0xe2, 0xad, 0xe9, 0x2d, 0xe8, 0x93, 0x15, 0xc9, 0x45, 0xac, 0x6a, 0x92, 0xd5,
+	0x7c, 0xd7, 0x25, 0x6b, 0xa1, 0x7d, 0x60, 0xc4, 0x02, 0x49, 0x04, 0xb4, 0x2a, 0xc1, 0xb0, 0x9b,
+	0xdc, 0x94, 0x46, 0xbb, 0xc9, 0x8d, 0x39, 0x0a, 0x5f, 0x1a, 0x99, 0xe7, 0xe1, 0xe1, 0xaa, 0x8c,
+	0x32, 0xd0, 0x02, 0xf7, 0xc6, 0x39, 0xfb, 0xbc, 0x6b, 0x3e, 0xc6, 0xe7, 0xbf, 0x03, 0x00, 0x00,
+	0xff, 0xff, 0xdc, 0x31, 0x50, 0x4d, 0xce, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
